--- a/.config
+++ b/.config
@@ -1396,18 +1396,19 @@ CONFIG_MAC80211_RC_DEFAULT_MINSTREL=y
 CONFIG_MAC80211_RC_DEFAULT="minstrel_ht"
 # CONFIG_MAC80211_MESH is not set
 CONFIG_MAC80211_LEDS=y
-# CONFIG_MAC80211_DEBUGFS is not set
+CONFIG_MAC80211_DEBUGFS=y
 CONFIG_MAC80211_MESSAGE_TRACING=y
 CONFIG_MAC80211_DEBUG_MENU=y
 # CONFIG_MAC80211_NOINLINE is not set
 # CONFIG_MAC80211_VERBOSE_DEBUG is not set
 # CONFIG_MAC80211_MLME_DEBUG is not set
-# CONFIG_MAC80211_STA_DEBUG is not set
-# CONFIG_MAC80211_HT_DEBUG is not set
+CONFIG_MAC80211_STA_DEBUG=y
+CONFIG_MAC80211_HT_DEBUG=y
 # CONFIG_MAC80211_OCB_DEBUG is not set
 # CONFIG_MAC80211_IBSS_DEBUG is not set
 # CONFIG_MAC80211_PS_DEBUG is not set
 # CONFIG_MAC80211_TDLS_DEBUG is not set
+# CONFIG_MAC80211_DEBUG_COUNTERS is not set
 CONFIG_MAC80211_STA_HASH_MAX_SIZE=0
 # CONFIG_WIMAX is not set
 CONFIG_RFKILL=y
@@ -2446,6 +2447,7 @@ CONFIG_IWLWIFI_OPMODE_MODULAR=y
 # Debugging Options
 #
 CONFIG_IWLWIFI_DEBUG=y
+CONFIG_IWLWIFI_DEBUGFS=y
 # CONFIG_IWLWIFI_DEBUG_EXPERIMENTAL_UCODE is not set
 CONFIG_IWLWIFI_DEVICE_TRACING=y
 # CONFIG_IWL4965 is not set
@@ -2480,6 +2482,7 @@ CONFIG_RT2X00_LIB=m
 CONFIG_RT2X00_LIB_FIRMWARE=y
 CONFIG_RT2X00_LIB_CRYPTO=y
 CONFIG_RT2X00_LIB_LEDS=y
+# CONFIG_RT2X00_LIB_DEBUGFS is not set
 # CONFIG_RT2X00_DEBUG is not set
 CONFIG_WL_MEDIATEK=y
 CONFIG_MT7601U=m
